<resources>
    <string name="app_name">Demo_bckj</string>
    <string name="popup_code_hint"><font size="13">请输入短信验证码</font></string>
    <string name="popup_login_hint"><font size="13">请输入手机号注册/登录</font></string>
    <string name="popup_login_pw_hint"><font size="13">请输入账号</font></string>
    <string name="popup_pw_login_hint"><font size="13">请输入密码</font></string>
    <string name="popup_phone_hint"><font size="13">请输入绑定的手机号</font></string>
    <string name="popup_phone_code_hint"><font size="13">请输入短信验证码</font></string>
    <string name="popup_phone_pw_hint"><font size="13">请输入新密码</font></string>
    <string name="popup_phone_pwPw_hint"><font size="13">请再次输入新密码</font></string>
    <string name="popup_auto_name"><font size="13">请输入真实姓名</font></string>
    <string name="popup_id_card"><font size="13">请输入身份证号</font></string>
    <string name="popup_register_number"><font size="13">账号4-12位字符</font></string>
    <string name="popup_register_pw"><font size="13">密码6-16位字符，区分大小写</font></string>
    <string name="popup_register_pw_pw"><font size="13">请再次输入密码</font></string>
    <string name="popup_binding_phone"><font size="13">请输入绑定的手机号</font></string>
    <string name="popup_verify_phone"><font size="13">请输入当前绑定的手机号</font></string>
    <string name="popup_binding_new_phone"><font size="13">请输入新的手机号</font></string>
    <string name="popup_pw"><font size="13">请输入原密码</font></string>
    <string name="popup_new_pw"><font size="13">请输入新密码</font></string>
    <string name="popup_new_again"><font size="13">请再次输入新密码</font></string>

    <string name="pay_success">支付成功:</string>
    <string name="pay_failed">支付失败:</string>
    <string name="orderNum">订单号：</string>
</resources>