<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/infinite_game_background_bg">
        <ImageView
            android:id="@+id/popup_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/infinite_game_login_back"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/bindTittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="修改密码"
            android:textColor="#333333"
            android:textSize="17dp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/popup_back"
            app:layout_constraintStart_toStartOf="@id/oldPassword"
            app:layout_constraintEnd_toEndOf="@id/oldPassword"/>
    <RelativeLayout
        android:id="@+id/oldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/popup_back">
        <EditText
            android:id="@+id/popup_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/popup_pw"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:paddingLeft="15dp"
            android:inputType="textPassword"
            android:background="@drawable/infinite_game_background_white"
            />
        <ImageView
            android:id="@+id/popup_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/infinite_game_removes_login"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="28dp"
            android:visibility="gone"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/oldPassword">
        <EditText
            android:id="@+id/popup_Et_code"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/popup_new_pw"
            android:paddingLeft="15dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword"
            android:background="@drawable/infinite_game_background_white"
            />
        <ImageView
            android:id="@+id/popup_remove_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/infinite_game_removes_login"
            android:layout_alignParentRight="true"
            android:layout_marginRight="18dp"
            android:visibility="gone"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/newPassword">
        <EditText
            android:id="@+id/pwAgain"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/popup_new_again"
            android:paddingLeft="15dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:inputType="textPassword"
            android:background="@drawable/infinite_game_background_white"
            />
        <ImageView
            android:id="@+id/pwAgain_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/infinite_game_removes_login"
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="18dp"
            android:visibility="gone"
            />

    </RelativeLayout>
    <Button
        android:id="@+id/popup_submit"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:text="提交"
        android:textStyle="bold"
        android:textColor="#fff"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:background="@drawable/infinite_game_background_login"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/again"
        app:layout_constraintStart_toStartOf="@id/again"
        app:layout_constraintEnd_toEndOf="@id/again"/>
    <TextView
        android:id="@+id/forget"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:text="忘记密码"
        android:textSize="10sp"
        android:textColor="#5293FF"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/popup_submit"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>