<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/background_bg"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >
        <ImageView
            android:id="@+id/popup_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/login_back"
            android:layout_marginLeft="20dp"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="账号注册"
            android:textStyle="bold"
            android:textSize="17dp"
            android:textColor="#333333"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText
            android:id="@+id/popup_number"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/popup_register_number"
            android:maxLength="12"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:paddingLeft="15dp"
            android:background="@drawable/background_white"
            />
        <ImageView
            android:id="@+id/popup_remove_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/removes_login"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="28dp"
            android:visibility="gone"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText
            android:id="@+id/popup_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:maxLength="16"
            android:hint="@string/popup_register_pw"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:paddingLeft="15dp"
            android:background="@drawable/background_white"
            />
        <ImageView
            android:id="@+id/popup_remove_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/removes_login"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="28dp"
            android:visibility="gone"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        >
        <EditText
            android:id="@+id/popup_password_pw"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/popup_register_pw_pw"
            android:maxLength="16"
            android:paddingLeft="15dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:background="@drawable/background_white"
            />
        <ImageView
            android:id="@+id/popup_remove_pw_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/removes_login"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="28dp"
            android:visibility="gone"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        >
        <CheckBox
            android:id="@+id/popup_Rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/selector_radio_check"
            android:layout_marginTop="2dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:text="已同意"/>
        <TextView
            android:id="@+id/popup_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:text="用户协议 "
            android:background="@drawable/text_underline"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:text="和 "/>
        <TextView
            android:id="@+id/popup_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:text="隐私政策"
            android:background="@drawable/text_underline"/>
    </LinearLayout>
    <Button
        android:id="@+id/popup_submit"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:text="注册并登录"
        android:textStyle="bold"
        android:textColor="#fff"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:background="@drawable/background_login"
        android:layout_marginBottom="10dp"
        />
</LinearLayout>